[package]
name = "kyushu-cli"
version = "0.0.3"
edition = "2024"
repository.workspace = true

[[bin]]
name = "kyu"
path = "src/main.rs"

[features]
local-worker = []

[dependencies]
wasmtime = "44.0.1"
wasmtime-wasi = "44.0.1"
wasmtime-wasi-http = { version = "44.0.1", features = ["p2"] }
wasmtime-wizer = { version = "44.0.1", features = ["component-model", "wasmtime"] }
tokio = { version = "1", features = ["net", "rt-multi-thread", "macros"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
hyper = { version = "1", features = ["http1", "server"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
rolldown = "1.0.0"
