[package]
name = "kyushu-worker"
version = "0.0.1"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "kyushu:worker"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies]
"wasi:http" = "0.2.11"

[dependencies]
rquickjs = { workspace = true }
wasi = "0.14.7"
wstd = { workspace = true }
kyushu-runtime = { path = "../crates/runtime" }
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }
